# willjs

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CNAME  index.html  jsconfig.json  main.py  package-lock.json  package.json  pyproject.toml  script.js  style.css  tsconfig.json
weather/: RAD_NL25_RAC_FM_202507080810.h5  RAD_NL25_RAC_FM_202507080820.h5  RAD_NL25_RAC_FM_202507080830.h5  RAD_NL25_RAC_FM_202507080835.h5  RAD_NL25_RAC_FM_202507080850.h5  RAD_NL25_RAC_FM_202507080855.h5  RAD_NL25_RAC_FM_202507080900.h5  RAD_NL25_RAC_FM_202507080915.h5  RAD_NL25_RAC_FM_202507080920.h5  RAD_NL25_RAC_FM_202507080935.h5  RAD_NL25_RAC_FM_202507080945.h5  RAD_NL25_RAC_FM_202507081000.h5  RAD_NL25_RAC_FM_202507081020.h5  RAD_NL25_RAC_FM_202507081035.h5  RAD_NL25_RAC_FM_202507081045.h5  RAD_NL25_RAC_FM_202507081100.h5  RAD_NL25_RAC_FM_202507081120.h5  RAD_NL25_RAC_FM_202507081130.h5  RAD_NL25_RAC_FM_202507081145.h5  RAD_NL25_RAC_FM_202507081205.h5  RAD_NL25_RAC_FM_202507081220.h5  RAD_NL25_RAC_FM_202507081240.h5  RAD_NL25_RAC_FM_202507081310.h5  RAD_NL25_RAC_FM_202507081325.h5  RAD_NL25_RAC_FM_202507081345.h5  RAD_NL25_RAC_FM_202507081400.h5  RAD_NL25_RAC_FM_202507081420.h5  RAD_NL25_RAC_FM_202507081435.h5  RAD_NL25_RAC_FM_202507081445.h5  RAD_NL25_RAC_FM_202507081500.h5  RAD_NL25_RAC_FM_202507081520.h5  RAD_NL25_RAC_FM_202507081535.h5  RAD_NL25_RAC_FM_202507081545.h5  RAD_NL25_RAC_FM_202507081600.h5  RAD_NL25_RAC_FM_202507081620.h5  RAD_NL25_RAC_FM_202507081635.h5  RAD_NL25_RAC_FM_202507081640.h5  RAD_NL25_RAC_FM_202507081655.h5  RAD_NL25_RAC_FM_202507081700.h5  (+486 more)
(+458 files in other folders)
