[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "netcdf4>=1.7.2",
    "pyproj>=3.7.1",
    "requests>=2.32.4",
    "xarray>=2025.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
